[package]
name = "encrypt_file"
version = "0.1.0"
edition = "2021"
description = "A Rust library for encrypting files using the XChaCha20 algorithm."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.86" }
anyhow = "1.0.66"
chacha20poly1305 = "0.10.1"
getrandom = { version = "0.2.9", features = ["js"] }
js-sys = "0.3"
base64 = "0.21.2"
blake3 = "1.3.1"
hex = "0.4.3"
